// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game has a matching snapshot 1`] = `
Array [
  "Received ",
  "J of Spades was turned over",
  "B passed",
  "C passed",
  "D passed",
  "A ordered up the card",
  "Spades is trump",
  "B leads next trick",
  "B played 10 of Diamonds",
  "C played J of Diamonds",
  "D played Q of Diamonds",
  "A took the trick",
  "A leads next trick",
  "B played A of Diamonds",
  "C played 9 of Spades",
  "D played 10 of Spades",
  "A took the trick",
  "A leads next trick",
  "B played 10 of Hearts",
  "C played J of Hearts",
  "D played Q of Hearts",
  "D took the trick",
  "D leads next trick",
  "D played 10 of Clubs",
  "B played Q of Clubs",
  "C played 9 of Clubs",
  "B took the trick",
  "B leads next trick",
  "B played A of Hearts",
  "C played K of Clubs",
  "D played A of Clubs",
  "A took the trick",
  "A, C won 1 points",
  "A: 1 B: 0 C: 1 D: 0",
  "Received ",
  "J of Spades was turned over",
  "C passed",
  "D passed",
  "A passed",
  "B ordered up the card",
  "Spades is trump",
  "C leads next trick",
  "C played 10 of Diamonds",
  "D played J of Diamonds",
  "B played K of Diamonds",
  "B took the trick",
  "B leads next trick",
  "B played J of Clubs",
  "C played A of Diamonds",
  "D played 9 of Spades",
  "B took the trick",
  "B leads next trick",
  "B played 9 of Hearts",
  "C played 10 of Hearts",
  "D played J of Hearts",
  "A took the trick",
  "A leads next trick",
  "B played K of Hearts",
  "C played Q of Clubs",
  "D played 9 of Clubs",
  "C took the trick",
  "C leads next trick",
  "C played A of Hearts",
  "D played K of Clubs",
  "B played J of Spades",
  "B took the trick",
  "B, D won 1 points",
  "A: 1 B: 1 C: 1 D: 1",
  "Received ",
  "J of Spades was turned over",
  "D passed",
  "A passed",
  "B passed",
  "C ordered up the card",
  "Spades is trump",
  "D leads next trick",
  "D played 10 of Diamonds",
  "B played Q of Diamonds",
  "C played K of Diamonds",
  "C took the trick",
  "C leads next trick",
  "C played J of Clubs",
  "D played A of Diamonds",
  "B played 10 of Spades",
  "C took the trick",
  "C leads next trick",
  "C played 9 of Hearts",
  "D played 10 of Hearts",
  "B played Q of Hearts",
  "B took the trick",
  "B leads next trick",
  "B played 10 of Clubs",
  "C played K of Hearts",
  "D played Q of Clubs",
  "D took the trick",
  "D leads next trick",
  "D played A of Hearts",
  "B played A of Clubs",
  "C played J of Spades",
  "C took the trick",
  "A, C won 1 points",
  "A: 2 B: 1 C: 2 D: 1",
  "Received ",
  "J of Spades was turned over",
  "A passed",
  "B passed",
  "C passed",
  "D ordered up the card",
  "Spades is trump",
  "A leads next trick",
  "B played J of Diamonds",
  "C played Q of Diamonds",
  "D played K of Diamonds",
  "D took the trick",
  "D leads next trick",
  "D played J of Clubs",
  "B played 9 of Spades",
  "C played 10 of Spades",
  "D took the trick",
  "D leads next trick",
  "D played 9 of Hearts",
  "B played J of Hearts",
  "C played Q of Hearts",
  "C took the trick",
  "C leads next trick",
  "C played 10 of Clubs",
  "D played K of Hearts",
  "B played 9 of Clubs",
  "A took the trick",
  "A leads next trick",
  "B played K of Clubs",
  "C played A of Clubs",
  "D played J of Spades",
  "D took the trick",
  "B, D won 1 points",
  "A: 2 B: 2 C: 2 D: 2",
  "Received ",
  "J of Spades was turned over",
  "B passed",
  "C passed",
  "D passed",
  "A ordered up the card",
  "Spades is trump",
  "B leads next trick",
  "B played 10 of Diamonds",
  "C played J of Diamonds",
  "D played Q of Diamonds",
  "A took the trick",
  "A leads next trick",
  "B played A of Diamonds",
  "C played 9 of Spades",
  "D played 10 of Spades",
  "A took the trick",
  "A leads next trick",
  "B played 10 of Hearts",
  "C played J of Hearts",
  "D played Q of Hearts",
  "D took the trick",
  "D leads next trick",
  "D played 10 of Clubs",
  "B played Q of Clubs",
  "C played 9 of Clubs",
  "B took the trick",
  "B leads next trick",
  "B played A of Hearts",
  "C played K of Clubs",
  "D played A of Clubs",
  "A took the trick",
  "A, C won 1 points",
  "A: 3 B: 2 C: 3 D: 2",
  "Received ",
  "J of Spades was turned over",
  "C passed",
  "D passed",
  "A passed",
  "B ordered up the card",
  "Spades is trump",
  "C leads next trick",
  "C played 10 of Diamonds",
  "D played J of Diamonds",
  "B played K of Diamonds",
  "B took the trick",
  "B leads next trick",
  "B played J of Clubs",
  "C played A of Diamonds",
  "D played 9 of Spades",
  "B took the trick",
  "B leads next trick",
  "B played 9 of Hearts",
  "C played 10 of Hearts",
  "D played J of Hearts",
  "A took the trick",
  "A leads next trick",
  "B played K of Hearts",
  "C played Q of Clubs",
  "D played 9 of Clubs",
  "C took the trick",
  "C leads next trick",
  "C played A of Hearts",
  "D played K of Clubs",
  "B played J of Spades",
  "B took the trick",
  "B, D won 1 points",
  "A: 3 B: 3 C: 3 D: 3",
  "Received ",
  "J of Spades was turned over",
  "D passed",
  "A passed",
  "B passed",
  "C ordered up the card",
  "Spades is trump",
  "D leads next trick",
  "D played 10 of Diamonds",
  "B played Q of Diamonds",
  "C played K of Diamonds",
  "C took the trick",
  "C leads next trick",
  "C played J of Clubs",
  "D played A of Diamonds",
  "B played 10 of Spades",
  "C took the trick",
  "C leads next trick",
  "C played 9 of Hearts",
  "D played 10 of Hearts",
  "B played Q of Hearts",
  "B took the trick",
  "B leads next trick",
  "B played 10 of Clubs",
  "C played K of Hearts",
  "D played Q of Clubs",
  "D took the trick",
  "D leads next trick",
  "D played A of Hearts",
  "B played A of Clubs",
  "C played J of Spades",
  "C took the trick",
  "A, C won 1 points",
  "A: 4 B: 3 C: 4 D: 3",
]
`;

exports[`game has a matching snapshot 2`] = `
Array [
  "Received ",
  "J of Spades was turned over",
  "B passed",
  "C passed",
  "D passed",
  "A ordered up the card",
  "Spades is trump",
  "B leads next trick",
  "C played J of Diamonds",
  "D played Q of Diamonds",
  "A played K of Diamonds",
  "A took the trick",
  "A leads next trick",
  "A played J of Clubs",
  "C played 9 of Spades",
  "D played 10 of Spades",
  "A took the trick",
  "A leads next trick",
  "A played 9 of Hearts",
  "C played J of Hearts",
  "D played Q of Hearts",
  "D took the trick",
  "D leads next trick",
  "D played 10 of Clubs",
  "A played K of Hearts",
  "C played 9 of Clubs",
  "B took the trick",
  "B leads next trick",
  "C played K of Clubs",
  "D played A of Clubs",
  "A played J of Spades",
  "A took the trick",
  "A, C won 1 points",
  "A: 1 B: 0 C: 1 D: 0",
  "Received ",
  "J of Spades was turned over",
  "C passed",
  "D passed",
  "A passed",
  "B ordered up the card",
  "Spades is trump",
  "C leads next trick",
  "C played 10 of Diamonds",
  "D played J of Diamonds",
  "A played Q of Diamonds",
  "B took the trick",
  "B leads next trick",
  "C played A of Diamonds",
  "D played 9 of Spades",
  "A played 10 of Spades",
  "B took the trick",
  "B leads next trick",
  "C played 10 of Hearts",
  "D played J of Hearts",
  "A played Q of Hearts",
  "A took the trick",
  "A leads next trick",
  "A played 10 of Clubs",
  "C played Q of Clubs",
  "D played 9 of Clubs",
  "C took the trick",
  "C leads next trick",
  "C played A of Hearts",
  "D played K of Clubs",
  "A played A of Clubs",
  "B took the trick",
  "B, D won 1 points",
  "A: 1 B: 1 C: 1 D: 1",
  "Received ",
  "J of Spades was turned over",
  "D passed",
  "A passed",
  "B passed",
  "C ordered up the card",
  "Spades is trump",
  "D leads next trick",
  "D played 10 of Diamonds",
  "A played J of Diamonds",
  "C played K of Diamonds",
  "C took the trick",
  "C leads next trick",
  "C played J of Clubs",
  "D played A of Diamonds",
  "A played 9 of Spades",
  "C took the trick",
  "C leads next trick",
  "C played 9 of Hearts",
  "D played 10 of Hearts",
  "A played J of Hearts",
  "B took the trick",
  "B leads next trick",
  "C played K of Hearts",
  "D played Q of Clubs",
  "A played 9 of Clubs",
  "D took the trick",
  "D leads next trick",
  "D played A of Hearts",
  "A played K of Clubs",
  "C played J of Spades",
  "C took the trick",
  "A, C won 1 points",
  "A: 2 B: 1 C: 2 D: 1",
  "Received ",
  "J of Spades was turned over",
  "A passed",
  "B passed",
  "C passed",
  "D ordered up the card",
  "Spades is trump",
  "A leads next trick",
  "A played 10 of Diamonds",
  "C played Q of Diamonds",
  "D played K of Diamonds",
  "D took the trick",
  "D leads next trick",
  "D played J of Clubs",
  "A played A of Diamonds",
  "C played 10 of Spades",
  "D took the trick",
  "D leads next trick",
  "D played 9 of Hearts",
  "A played 10 of Hearts",
  "C played Q of Hearts",
  "C took the trick",
  "C leads next trick",
  "C played 10 of Clubs",
  "D played K of Hearts",
  "A played Q of Clubs",
  "A took the trick",
  "A leads next trick",
  "A played A of Hearts",
  "C played A of Clubs",
  "D played J of Spades",
  "D took the trick",
  "B, D won 1 points",
  "A: 2 B: 2 C: 2 D: 2",
  "Received ",
  "J of Spades was turned over",
  "B passed",
  "C passed",
  "D passed",
  "A ordered up the card",
  "Spades is trump",
  "B leads next trick",
  "C played J of Diamonds",
  "D played Q of Diamonds",
  "A played K of Diamonds",
  "A took the trick",
  "A leads next trick",
  "A played J of Clubs",
  "C played 9 of Spades",
  "D played 10 of Spades",
  "A took the trick",
  "A leads next trick",
  "A played 9 of Hearts",
  "C played J of Hearts",
  "D played Q of Hearts",
  "D took the trick",
  "D leads next trick",
  "D played 10 of Clubs",
  "A played K of Hearts",
  "C played 9 of Clubs",
  "B took the trick",
  "B leads next trick",
  "C played K of Clubs",
  "D played A of Clubs",
  "A played J of Spades",
  "A took the trick",
  "A, C won 1 points",
  "A: 3 B: 2 C: 3 D: 2",
  "Received ",
  "J of Spades was turned over",
  "C passed",
  "D passed",
  "A passed",
  "B ordered up the card",
  "Spades is trump",
  "C leads next trick",
  "C played 10 of Diamonds",
  "D played J of Diamonds",
  "A played Q of Diamonds",
  "B took the trick",
  "B leads next trick",
  "C played A of Diamonds",
  "D played 9 of Spades",
  "A played 10 of Spades",
  "B took the trick",
  "B leads next trick",
  "C played 10 of Hearts",
  "D played J of Hearts",
  "A played Q of Hearts",
  "A took the trick",
  "A leads next trick",
  "A played 10 of Clubs",
  "C played Q of Clubs",
  "D played 9 of Clubs",
  "C took the trick",
  "C leads next trick",
  "C played A of Hearts",
  "D played K of Clubs",
  "A played A of Clubs",
  "B took the trick",
  "B, D won 1 points",
  "A: 3 B: 3 C: 3 D: 3",
  "Received ",
  "J of Spades was turned over",
  "D passed",
  "A passed",
  "B passed",
  "C ordered up the card",
  "Spades is trump",
  "D leads next trick",
  "D played 10 of Diamonds",
  "A played J of Diamonds",
  "C played K of Diamonds",
  "C took the trick",
  "C leads next trick",
  "C played J of Clubs",
  "D played A of Diamonds",
  "A played 9 of Spades",
  "C took the trick",
  "C leads next trick",
  "C played 9 of Hearts",
  "D played 10 of Hearts",
  "A played J of Hearts",
  "B took the trick",
  "B leads next trick",
  "C played K of Hearts",
  "D played Q of Clubs",
  "A played 9 of Clubs",
  "D took the trick",
  "D leads next trick",
  "D played A of Hearts",
  "A played K of Clubs",
  "C played J of Spades",
  "C took the trick",
  "A, C won 1 points",
  "A: 4 B: 3 C: 4 D: 3",
]
`;

exports[`game has a matching snapshot 3`] = `
Array [
  "Received ",
  "J of Spades was turned over",
  "B passed",
  "C passed",
  "D passed",
  "A ordered up the card",
  "Spades is trump",
  "B leads next trick",
  "B played 10 of Diamonds",
  "D played Q of Diamonds",
  "A played K of Diamonds",
  "A took the trick",
  "A leads next trick",
  "A played J of Clubs",
  "B played A of Diamonds",
  "D played 10 of Spades",
  "A took the trick",
  "A leads next trick",
  "A played 9 of Hearts",
  "B played 10 of Hearts",
  "D played Q of Hearts",
  "D took the trick",
  "D leads next trick",
  "D played 10 of Clubs",
  "A played K of Hearts",
  "B played Q of Clubs",
  "B took the trick",
  "B leads next trick",
  "B played A of Hearts",
  "D played A of Clubs",
  "A played J of Spades",
  "A took the trick",
  "A, C won 1 points",
  "A: 1 B: 0 C: 1 D: 0",
  "Received ",
  "J of Spades was turned over",
  "C passed",
  "D passed",
  "A passed",
  "B ordered up the card",
  "Spades is trump",
  "C leads next trick",
  "D played J of Diamonds",
  "A played Q of Diamonds",
  "B played K of Diamonds",
  "B took the trick",
  "B leads next trick",
  "B played J of Clubs",
  "D played 9 of Spades",
  "A played 10 of Spades",
  "B took the trick",
  "B leads next trick",
  "B played 9 of Hearts",
  "D played J of Hearts",
  "A played Q of Hearts",
  "A took the trick",
  "A leads next trick",
  "A played 10 of Clubs",
  "B played K of Hearts",
  "D played 9 of Clubs",
  "C took the trick",
  "C leads next trick",
  "D played K of Clubs",
  "A played A of Clubs",
  "B played J of Spades",
  "B took the trick",
  "B, D won 1 points",
  "A: 1 B: 1 C: 1 D: 1",
  "Received ",
  "J of Spades was turned over",
  "D passed",
  "A passed",
  "B passed",
  "C ordered up the card",
  "Spades is trump",
  "D leads next trick",
  "D played 10 of Diamonds",
  "A played J of Diamonds",
  "B played Q of Diamonds",
  "C took the trick",
  "C leads next trick",
  "D played A of Diamonds",
  "A played 9 of Spades",
  "B played 10 of Spades",
  "C took the trick",
  "C leads next trick",
  "D played 10 of Hearts",
  "A played J of Hearts",
  "B played Q of Hearts",
  "B took the trick",
  "B leads next trick",
  "B played 10 of Clubs",
  "D played Q of Clubs",
  "A played 9 of Clubs",
  "D took the trick",
  "D leads next trick",
  "D played A of Hearts",
  "A played K of Clubs",
  "B played A of Clubs",
  "C took the trick",
  "A, C won 1 points",
  "A: 2 B: 1 C: 2 D: 1",
  "Received ",
  "J of Spades was turned over",
  "A passed",
  "B passed",
  "C passed",
  "D ordered up the card",
  "Spades is trump",
  "A leads next trick",
  "A played 10 of Diamonds",
  "B played J of Diamonds",
  "D played K of Diamonds",
  "D took the trick",
  "D leads next trick",
  "D played J of Clubs",
  "A played A of Diamonds",
  "B played 9 of Spades",
  "D took the trick",
  "D leads next trick",
  "D played 9 of Hearts",
  "A played 10 of Hearts",
  "B played J of Hearts",
  "C took the trick",
  "C leads next trick",
  "D played K of Hearts",
  "A played Q of Clubs",
  "B played 9 of Clubs",
  "A took the trick",
  "A leads next trick",
  "A played A of Hearts",
  "B played K of Clubs",
  "D played J of Spades",
  "D took the trick",
  "B, D won 1 points",
  "A: 2 B: 2 C: 2 D: 2",
  "Received ",
  "J of Spades was turned over",
  "B passed",
  "C passed",
  "D passed",
  "A ordered up the card",
  "Spades is trump",
  "B leads next trick",
  "B played 10 of Diamonds",
  "D played Q of Diamonds",
  "A played K of Diamonds",
  "A took the trick",
  "A leads next trick",
  "A played J of Clubs",
  "B played A of Diamonds",
  "D played 10 of Spades",
  "A took the trick",
  "A leads next trick",
  "A played 9 of Hearts",
  "B played 10 of Hearts",
  "D played Q of Hearts",
  "D took the trick",
  "D leads next trick",
  "D played 10 of Clubs",
  "A played K of Hearts",
  "B played Q of Clubs",
  "B took the trick",
  "B leads next trick",
  "B played A of Hearts",
  "D played A of Clubs",
  "A played J of Spades",
  "A took the trick",
  "A, C won 1 points",
  "A: 3 B: 2 C: 3 D: 2",
  "Received ",
  "J of Spades was turned over",
  "C passed",
  "D passed",
  "A passed",
  "B ordered up the card",
  "Spades is trump",
  "C leads next trick",
  "D played J of Diamonds",
  "A played Q of Diamonds",
  "B played K of Diamonds",
  "B took the trick",
  "B leads next trick",
  "B played J of Clubs",
  "D played 9 of Spades",
  "A played 10 of Spades",
  "B took the trick",
  "B leads next trick",
  "B played 9 of Hearts",
  "D played J of Hearts",
  "A played Q of Hearts",
  "A took the trick",
  "A leads next trick",
  "A played 10 of Clubs",
  "B played K of Hearts",
  "D played 9 of Clubs",
  "C took the trick",
  "C leads next trick",
  "D played K of Clubs",
  "A played A of Clubs",
  "B played J of Spades",
  "B took the trick",
  "B, D won 1 points",
  "A: 3 B: 3 C: 3 D: 3",
  "Received ",
  "J of Spades was turned over",
  "D passed",
  "A passed",
  "B passed",
  "C ordered up the card",
  "Spades is trump",
  "D leads next trick",
  "D played 10 of Diamonds",
  "A played J of Diamonds",
  "B played Q of Diamonds",
  "C took the trick",
  "C leads next trick",
  "D played A of Diamonds",
  "A played 9 of Spades",
  "B played 10 of Spades",
  "C took the trick",
  "C leads next trick",
  "D played 10 of Hearts",
  "A played J of Hearts",
  "B played Q of Hearts",
  "B took the trick",
  "B leads next trick",
  "B played 10 of Clubs",
  "D played Q of Clubs",
  "A played 9 of Clubs",
  "D took the trick",
  "D leads next trick",
  "D played A of Hearts",
  "A played K of Clubs",
  "B played A of Clubs",
  "C took the trick",
  "A, C won 1 points",
  "A: 4 B: 3 C: 4 D: 3",
]
`;

exports[`game has a matching snapshot 4`] = `
Array [
  "Received ",
  "J of Spades was turned over",
  "B passed",
  "C passed",
  "D passed",
  "A ordered up the card",
  "Spades is trump",
  "B leads next trick",
  "B played 10 of Diamonds",
  "C played J of Diamonds",
  "A played K of Diamonds",
  "A took the trick",
  "A leads next trick",
  "A played J of Clubs",
  "B played A of Diamonds",
  "C played 9 of Spades",
  "A took the trick",
  "A leads next trick",
  "A played 9 of Hearts",
  "B played 10 of Hearts",
  "C played J of Hearts",
  "D took the trick",
  "D leads next trick",
  "A played K of Hearts",
  "B played Q of Clubs",
  "C played 9 of Clubs",
  "B took the trick",
  "B leads next trick",
  "B played A of Hearts",
  "C played K of Clubs",
  "A played J of Spades",
  "A took the trick",
  "A, C won 1 points",
  "A: 1 B: 0 C: 1 D: 0",
  "Received ",
  "J of Spades was turned over",
  "C passed",
  "D passed",
  "A passed",
  "B ordered up the card",
  "Spades is trump",
  "C leads next trick",
  "C played 10 of Diamonds",
  "A played Q of Diamonds",
  "B played K of Diamonds",
  "B took the trick",
  "B leads next trick",
  "B played J of Clubs",
  "C played A of Diamonds",
  "A played 10 of Spades",
  "B took the trick",
  "B leads next trick",
  "B played 9 of Hearts",
  "C played 10 of Hearts",
  "A played Q of Hearts",
  "A took the trick",
  "A leads next trick",
  "A played 10 of Clubs",
  "B played K of Hearts",
  "C played Q of Clubs",
  "C took the trick",
  "C leads next trick",
  "C played A of Hearts",
  "A played A of Clubs",
  "B played J of Spades",
  "B took the trick",
  "B, D won 1 points",
  "A: 1 B: 1 C: 1 D: 1",
  "Received ",
  "J of Spades was turned over",
  "D passed",
  "A passed",
  "B passed",
  "C ordered up the card",
  "Spades is trump",
  "D leads next trick",
  "A played J of Diamonds",
  "B played Q of Diamonds",
  "C played K of Diamonds",
  "C took the trick",
  "C leads next trick",
  "C played J of Clubs",
  "A played 9 of Spades",
  "B played 10 of Spades",
  "C took the trick",
  "C leads next trick",
  "C played 9 of Hearts",
  "A played J of Hearts",
  "B played Q of Hearts",
  "B took the trick",
  "B leads next trick",
  "B played 10 of Clubs",
  "C played K of Hearts",
  "A played 9 of Clubs",
  "D took the trick",
  "D leads next trick",
  "A played K of Clubs",
  "B played A of Clubs",
  "C played J of Spades",
  "C took the trick",
  "A, C won 1 points",
  "A: 2 B: 1 C: 2 D: 1",
  "Received ",
  "J of Spades was turned over",
  "A passed",
  "B passed",
  "C passed",
  "D ordered up the card",
  "Spades is trump",
  "A leads next trick",
  "A played 10 of Diamonds",
  "B played J of Diamonds",
  "C played Q of Diamonds",
  "D took the trick",
  "D leads next trick",
  "A played A of Diamonds",
  "B played 9 of Spades",
  "C played 10 of Spades",
  "D took the trick",
  "D leads next trick",
  "A played 10 of Hearts",
  "B played J of Hearts",
  "C played Q of Hearts",
  "C took the trick",
  "C leads next trick",
  "C played 10 of Clubs",
  "A played Q of Clubs",
  "B played 9 of Clubs",
  "A took the trick",
  "A leads next trick",
  "A played A of Hearts",
  "B played K of Clubs",
  "C played A of Clubs",
  "D took the trick",
  "B, D won 1 points",
  "A: 2 B: 2 C: 2 D: 2",
  "Received ",
  "J of Spades was turned over",
  "B passed",
  "C passed",
  "D passed",
  "A ordered up the card",
  "Spades is trump",
  "B leads next trick",
  "B played 10 of Diamonds",
  "C played J of Diamonds",
  "A played K of Diamonds",
  "A took the trick",
  "A leads next trick",
  "A played J of Clubs",
  "B played A of Diamonds",
  "C played 9 of Spades",
  "A took the trick",
  "A leads next trick",
  "A played 9 of Hearts",
  "B played 10 of Hearts",
  "C played J of Hearts",
  "D took the trick",
  "D leads next trick",
  "A played K of Hearts",
  "B played Q of Clubs",
  "C played 9 of Clubs",
  "B took the trick",
  "B leads next trick",
  "B played A of Hearts",
  "C played K of Clubs",
  "A played J of Spades",
  "A took the trick",
  "A, C won 1 points",
  "A: 3 B: 2 C: 3 D: 2",
  "Received ",
  "J of Spades was turned over",
  "C passed",
  "D passed",
  "A passed",
  "B ordered up the card",
  "Spades is trump",
  "C leads next trick",
  "C played 10 of Diamonds",
  "A played Q of Diamonds",
  "B played K of Diamonds",
  "B took the trick",
  "B leads next trick",
  "B played J of Clubs",
  "C played A of Diamonds",
  "A played 10 of Spades",
  "B took the trick",
  "B leads next trick",
  "B played 9 of Hearts",
  "C played 10 of Hearts",
  "A played Q of Hearts",
  "A took the trick",
  "A leads next trick",
  "A played 10 of Clubs",
  "B played K of Hearts",
  "C played Q of Clubs",
  "C took the trick",
  "C leads next trick",
  "C played A of Hearts",
  "A played A of Clubs",
  "B played J of Spades",
  "B took the trick",
  "B, D won 1 points",
  "A: 3 B: 3 C: 3 D: 3",
  "Received ",
  "J of Spades was turned over",
  "D passed",
  "A passed",
  "B passed",
  "C ordered up the card",
  "Spades is trump",
  "D leads next trick",
  "A played J of Diamonds",
  "B played Q of Diamonds",
  "C played K of Diamonds",
  "C took the trick",
  "C leads next trick",
  "C played J of Clubs",
  "A played 9 of Spades",
  "B played 10 of Spades",
  "C took the trick",
  "C leads next trick",
  "C played 9 of Hearts",
  "A played J of Hearts",
  "B played Q of Hearts",
  "B took the trick",
  "B leads next trick",
  "B played 10 of Clubs",
  "C played K of Hearts",
  "A played 9 of Clubs",
  "D took the trick",
  "D leads next trick",
  "A played K of Clubs",
  "B played A of Clubs",
  "C played J of Spades",
  "C took the trick",
  "A, C won 1 points",
  "A: 4 B: 3 C: 4 D: 3",
]
`;
